[package]
name = "json-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
base64 = "0.21.5"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"

